# Halide-Projects

My_projects/: CMakeLists.txt  blur_filter  blur_filter.cpp  blur_filter.h  generator_1  generator_1.cpp  generator_1_App.cpp  generator_1_usage.sh  generator_2.cpp  lesson_01_modified  lesson_01_modified.cpp  lesson_02_modified  lesson_02_modified.cpp  lesson_03_modified  lesson_03_modified.cpp  lesson_04_modified  lesson_04_modified.cpp  lesson_05_modified.cpp  lesson_07_modified  lesson_07_modified.cpp  lesson_08_modified  lesson_08_modified.cpp  lesson_09_modified  lesson_09_modified.cpp  lesson_10_1_modified.cpp  lesson_10_2_modified.cpp  lesson_10_generate  lesson_10_halide.h  lesson_10_run  lesson_11_arm_32_android.h  lesson_11_arm_32_linux.h  lesson_11_host.h  lesson_11_modified  lesson_11_modified.cpp  lesson_12_modified  lesson_12_modified.cpp  lesson_13_modified  lesson_13_modified.cpp  lesson_15_generators_usage.sh  lesson_19_modified.cpp  (+3 more)
Tutorial_examples/: brighten_either.h  brighten_either.registration.cpp  brighten_interleaved.h  brighten_interleaved.registration.cpp  brighten_planar.h  brighten_planar.registration.cpp  brighten_specialized.h  brighten_specialized.registration.cpp  gradient.html  lesson_01  lesson_01.cpp  lesson_02  lesson_02.cpp  lesson_03  lesson_03.cpp  lesson_04  lesson_04.cpp  lesson_05  lesson_05.cpp  lesson_06  lesson_06.cpp  lesson_07  lesson_07.cpp  lesson_08  lesson_08.cpp  lesson_09.cpp  lesson_10_1  lesson_10_1.cpp  lesson_10_2  lesson_11  lesson_11.cpp  lesson_11_arm_32_ios.h  lesson_11_x86_64_windows.h  lesson_13  lesson_14  (+18 more)
